tm/tests/snapshots/planner_fixtures__plan_basic_early_diagnostics.snap
---
source: tm/tests/planner_fixtures.rs
expression: diagnostics(&day)
---
underused      ·
a_capacity_lost 0m
hot            ·
impossible     ·
conflicts      ·
blocked        t5(1)
deferred       ·
waiting        a4
dropped_tail   m3 t1 t4 d2 d1 m4 x2 a1 c2 p1
plan_honesty   2.17
rest_debt      0m
