tm/tests/snapshots/planner_fixtures__plan_basic_late_timeline.snap
---
source: tm/tests/planner_fixtures.rs
expression: timeline(&day)
---
date 2026-09-07 · window 10:30–19:30 · budget 6b
06:10-06:40 routine      · breakfast  ✓    
10:30-10:50 routine      1 a3         ⚠!   
10:50-11:30 block        5 m1              
11:30-12:00 routine      · lunch      !    
12:00-12:50 block        5 m1              
12:50-13:50 wall         · g1              
13:50-14:50 block        5 m1              
14:50-15:10 break        · ·               
15:10-16:00 block        4 t3              
16:00-17:00 routine      · workout    !    
17:00-17:30 block        3 t4              
17:30-18:00 routine      · dinner     !    
18:00-19:00 block        3 t4              
19:00-19:45 routine      · groceries  ~    
19:45-20:15 routine      · laundry    ~    
20:15-20:35 routine      · shower     ~    
21:30-22:00 wind-down    · ·               
22:00-00:00 sleep        · sleep
