tm/tests/snapshots/planner_fixtures__plan_home_day_diagnostics.snap
---
source: tm/tests/planner_fixtures.rs
expression: diagnostics(&day)
---
underused      ·
a_capacity_lost 0m
hot            ·
impossible     ·
conflicts      ·
blocked        t5(1)
deferred       ·
waiting        a4
dropped_tail   m1 m3 t1 t3 m2 d2 d1 x2 c2
plan_honesty   0.64
rest_debt      0m
