tm/tests/snapshots/planner_fixtures__plan_travel_day_diagnostics.snap
---
source: tm/tests/planner_fixtures.rs
expression: diagnostics(&day)
---
underused      ·
a_capacity_lost 30m
hot            ·
impossible     ·
conflicts      ·
blocked        t5(1)
deferred       ·
waiting        a4
dropped_tail   m1 m3 t1 t3 m2 t4 d2 d1 m4 x2 a1 c2 p1
plan_honesty   ·
rest_debt      0m
note           travel day: no blocks planned (`travel-day` wall today)
